kubernetes/apps/home-automation/node-red/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: node-red
  namespace: home-automation
spec:
  hosts:
    - nodered.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: node-red.home-automation.svc.cluster.local
            port:
              number: 1880
